--- a/net/DevExtreme.AspNet.Data.Tests.EFCore10/DevExtreme.AspNet.Data.Tests.EFCore10.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.EFCore10/DevExtreme.AspNet.Data.Tests.EFCore10.csproj
@@ -8,7 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" VersionOverride="10.0.0-preview.7.25380.108" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" VersionOverride="10.0.0-rc.1.25451.107" />
     <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit" />
