--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,11 +32,11 @@ jobs:
     - run: curl -L https://github.com/editorconfig-checker/editorconfig-checker/releases/download/2.3.5/ec-linux-amd64.tar.gz  | tar xzf - -C /opt
     - run: /opt/bin/ec-linux-amd64 -v
 
-    - name: Install ESLint
-      run: |
-        ESLINT_VERSION=$(node -p "require('./package-lock.json').packages['node_modules/eslint'].version")
-        npm i --no-save eslint@$ESLINT_VERSION
-    - run: npm run eslint
+    - name: Install deps
+      run: npm ci
+
+    - name: Lint
+      run: npm run eslint
 
   test-js:
     runs-on: ubuntu-latest
@@ -44,20 +44,25 @@ jobs:
     strategy:
       matrix:
         version:
-          - '~18.1.0'
-          - '~22.2.0'
-          - '>=23.1.0'
+          - '18.1'
+          - '22.2'
+          - 'latest'
 
     steps:
-    - uses: actions/checkout@v4
 
-    - run: node build/make-nojquery
+    - name: Checkout sources
+      uses: actions/checkout@v4
 
-    - run: npm ci --omit=peer
-    - run: npm i --no-save "devextreme@${{ matrix.version }}"
-    - name: Install devextreme-dist
-      if: ${{ matrix.version == '>=23.1.0' }}
-      run: npm i --no-save "devextreme-dist@${{ matrix.version }}"
+    - name: Build no-jquery package
+      run: node build/make-nojquery
+
+    - name: Move lockfile
+      if: ${{ matrix.version != 'latest' }}
+      shell: bash
+      run: cp -f js-test/${{ matrix.version }}/package-lock.json package-lock.json
+
+    - run: npm ci
+
     - run: npm run dts
     - run: npm run karma
     - run: npm run karma-bundled
